k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  namespace: go-messenger
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: go-messenger.com  # Замените на домен
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api-gateway
            port:
              number: 80
